templates/namespace.yaml
# Creating a namespace
apiVersion: v1
kind: Namespace
metadata:
  name: typesense
