templates/headless-service.yaml
# headless service used by cluster members to resolve ip's 
apiVersion: v1
kind: Service
metadata:
  name: ts
  namespace: typesense
spec:
  clusterIP: None
  selector:
    app: typesense
  ports:
  - name: http
    port: 8108
    targetPort: typesense-http
