templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: typesense
  namespace: typesense
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - host: typesense.dwbn.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: typesense-svc
                port:
                  number: 8108
